    other strings) need to be NUL-terminated if the field is followed by
    another, so that its length can be determined.
  * Clarifying that a version number is an 8-bit byte instead of "the version
    shall start at zero". The second seems too proscriptive and the first
    accomplishes the same thing without inflaming those whose opinion says that
    versions MUST start at 1.

v9:
* Using "http://estalink.us/jsonschema" for the "$id" value.
* Need to discuss:
  * Should the ID link "https" instead of "http"? (Obviously, would change in
    the spec too.)

v10: [This was the latest after the discussion.]
* Removed integer types "int128" and "uint128", and removed simple type "uri"
  because, sadly, they're not in the current E1.20 spec. :(
* Changed the word "might" to "may" in the description for "stringType".

v11:
* Added a "duplicateCommandType" that can specify that one command has the same
  contents as another command. The GET/SET request/response commands can now
  either be a "commandType" or a "duplicateCommandType".
* Updated the DEVICE_LABEL.json example to illustrate using a duplicate command.
* Added a "refType" to the "oneOfTypes" list so that other parts can also be
  duplicated. For example, maybe one of the items in a command needs to
  duplicate another command item, either in the same or a different commmand.
  It is of type "json-pointer", see https://tools.ietf.org/html/rfc6901.
* Changed "simpleType" to be of type "anyOf an enum". In other words, other
  strings not in the list are allowed, so that there can exist manufacturer-
  specific types.

v12:
* Added a "displayName" everywhere there's a "name".
* Fixed the DEVICE_INFO.json example: moved "No footprint" to
  "dmx_start_address" from "dmx_footprint".
* Fixed spelling mistake in PRODUCT_DETAIL_ID_LIST.json.
* Updated the description in "simpleType" to reference "Table A-15: Data Type
  Defines" in the RDM spec.
* Added labels to "status_type" in STATUS_MESSAGES.json.